# ZeroLogic

./: CMakeLists.txt  README.md  ZeroLogic.sln  ZeroLogic.vcxproj  ZeroLogic.vcxproj.filters  eval.cpp  eval.h  gamestate.cpp  gamestate.h  main.cpp  misc.cpp  misc.h  movegeneration.cpp  movegeneration.h  search.cpp  search.h  uci.cpp  uci.h  variables.h
src/: eval.cpp  eval.h  game.h  gamestate.cpp  gamestate.h  hash.h  limit.h  main.cpp  misc.cpp  misc.h  movegen.cpp  movegen.h  movegenerator.h  new_search.cpp  new_search.h  perft_callback.h  position.h  search.cpp  search.h  search_callback.h  search_helpers.h  static.h  stuff.h  tables.cpp  tables.h  tests.h  transposition.h  uci.cpp  uci.h  variables.h
